--- a/src/components/RenderRouter/ListItem.scss
+++ b/src/components/RenderRouter/ListItem.scss
@@ -98,6 +98,10 @@
         color: #ffffff
     }
 
+    .ListItemH1.horizontal-video-player {
+        font-size: 2vw;
+    }
+
     .ListItemH1ImageList {
         font-size: 3vw;
         font-weight: bold;
