badges added, near-final styling

--- a/src/components/RenderRouter/ListItem.scss
+++ b/src/components/RenderRouter/ListItem.scss
@@ -477,6 +477,10 @@
         color: #ffffff
     }
 
+    .ListItemH1.horizontal-video-player {
+        font-size: 2vw;
+    }
+
     .ListItemH1ImageList {
         font-size: 3vw;
         font-weight: bold;
@@ -897,6 +901,10 @@
 
     .ListItemH1.whiteText {
         color: #ffffff
+    }
+
+    .ListItemH1.horizontal-video-player {
+        font-size: 7vw;
     }
 
     .ListItemH1ImageList {
