--- a/src/components/RenderRouter/ListItem.scss
+++ b/src/components/RenderRouter/ListItem.scss
@@ -377,6 +377,12 @@
     }
 }
 
+@media (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
+    .ListItemH1.horizontal-video-player {
+        font-size: 3vw;
+    }
+}
+
 @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
     .ListItemEventButton {
         background-color: #ffffff00 !important;
