final mobile fixes

--- a/src/components/RenderRouter/PodcastItem.scss
+++ b/src/components/RenderRouter/PodcastItem.scss
@@ -210,7 +210,8 @@
 
     .PodcastText {
         color: #C8C8C8;
-        margin-top: 0.5vw;
+        margin-top: 2vw;
+        margin-bottom: 2vw;
     }
 
     .PodcastTitle {
@@ -220,7 +221,7 @@
 
     .PodcastContentContainer {
         display: inline-block;
-        width: 62vw;
+        width: 60vw;
         margin-left: 6vw;
         margin-bottom: 4vw;
     }
